# breakdown

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
breakdown/: Notes.txt
breakdown/config/: AssetsManifest.toml  Ball.toml  Bricks.toml  Levels.toml  Player.toml  WindowConfig.toml
breakdown/include/: AppContext.hpp  AppData.hpp  Application.hpp  AssetKeys.hpp  State.hpp
breakdown/include/ECS/: Components.hpp  EntityFactory.hpp  Systems.hpp
breakdown/include/Managers/: ConfigManager.hpp  GlobalEventManager.hpp  ResourceManager.hpp  StateManager.hpp  WindowManager.hpp
breakdown/include/Utilities/: Logger.hpp  Utils.hpp
breakdown/src/: Application.cpp  State.cpp
breakdown/src/ECS/: EntityFactory.cpp  Systems.cpp
breakdown/src/Managers/: ConfigManager.cpp  GlobalEventManager.cpp  ResourceManager.cpp  StateManager.cpp  WindowManager.cpp
breakdown/src/Utilities/: Utils.cpp
cmake/: msvc-modules-toolchain.cmake
